--- a/inventory-app/src/index.html
+++ b/inventory-app/src/index.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
-<body class="mat-typography">
-  <app-root></app-root>
+<body class="mat-typography" >
+  <app-root ></app-root>
 </body>
+<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+m
 </html>
